--- a/1. Overview.ipynb
+++ b/1. Overview.ipynb
@@ -4,201 +4,203 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What is Statistical Learning"
+    "# <span style=\"color:blue\">What is Statistical Learning</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tools for understanding data, can be classified as supervised and unsupervised"
+    "Tools for understanding data, can be classified as supervised and unsupervised"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Supervised Learning"
+    "# <span style=\"color:blue\">Supervised Learning</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Building a statistical model for predicting, or estimating an output based on inputs. Supervising output is provided. The aim: Accurately predicting the response for future obvservations (prediction) or better understanding the relationship between the response and predictors (inference)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Unsupervised Learning "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### There are inputs but no supervising output. We learn relationships and structure from such data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Input variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Input data used for training the model. Diffrent names: predictors, independent variables, features. Typically denoted using the symbol `X`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Output variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Output data, provided either by observing or predicted by the model. Different names: response, dependent variable. Typically denoted using the symbol `y`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Math expression (supervised learning)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Suppose that we observe a quantitative response `y` and `p` different predictors, $X_1, X_2, ...., X_p$. We assume that there is some relationship between `y` and `X` = ($X_1, X_2, ...., X_p$), which can be written in the very general form \n",
+    "Building a statistical model for predicting, or estimating an output based on inputs. Supervising output is provided. \n",
     "\n",
-    "$$y = f(X) + \\epsilon$$"
+    "**The aim**: Accurately predicting the response for future obvservations (prediction) or better understanding the relationship between the response and predictors (inference)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `f` is some fixed but unknown function of $X_1, ...., X_p$, and $\\epsilon$ is a random _error term_, which is independent of `X` and has mean zero. `f` represents the systematic information that `X` provides about `y`."
+    "# <span style=\"color:blue\">Unsupervised Learning</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Why Estimate `f`"
+    "There are inputs but no supervising output. We learn relationships and structure from such data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prediction: Treated `f` as a black box, want to estimate the `y` based on new value `X`."
+    "# <span style=\"color:blue\">Input variable</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Inference: Understanding how `y` is affected as `X` changes."
+    "Input data used for training the model. Diffrent names: predictors, independent variables, features. Typically denoted using the symbol `X`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How Estimate `f`"
+    "# <span style=\"color:blue\">Output variable</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Parametric methods: (two steps)"
+    "Output data, provided either by observing or predicted by the model. Different names: response, dependent variable. Typically denoted using the symbol `y`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1. Make an assumption about the function form\n",
+    "# <span style=\"color:blue\">Math expression (supervised learning)</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suppose that we observe a quantitative response `y` and `p` different predictors, $X_1, X_2, ...., X_p$. We assume that there is some relationship between `y` and `X` = ($X_1, X_2, ...., X_p$), which can be written in the very general form \n",
+    "\n",
+    "## $$y = f(X) + \\epsilon$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`f` is some fixed but unknown function of $X_1, ...., X_p$, and $\\epsilon$ is a random _error term_, which is independent of `X` and has mean zero. `f` represents the systematic information that `X` provides about `y`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:blue\">Why Estimate `f`</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Prediction**: Treated `f` as a black box, want to estimate the `y` based on new value `X`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inference**: Understanding how `y` is affected as `X` changes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:blue\">How Estimate `f`</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parametric methods: (two steps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Make an assumption about the function form\n",
     "(eg: linear model)\n",
-    "$$f(X) = \\beta_0 + \\beta_1X_1 + \\beta_2X_2 + ... + \\beta_pX_p$$  \n"
+    "## $$f(X) = \\beta_0 + \\beta_1X_1 + \\beta_2X_2 + ... + \\beta_pX_p$$  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2. Use the training data to fit or train the model. Take the above linear model for example, we meed to  estimate the parameters $\\beta_0, \\beta_1, ..., \\beta_p$. We want to find values of these parameters such that\n",
-    "$$ y \\approx \\beta_0 + \\beta_1X_1 + \\beta_2X_2 + ... + \\beta_pX_p $$"
+    "- Use the training data to fit or train the model. Take the above linear model for example, we meed to  estimate the parameters $\\beta_0, \\beta_1, ..., \\beta_p$. We want to find values of these parameters such that\n",
+    "## $$ y \\approx \\beta_0 + \\beta_1X_1 + \\beta_2X_2 + ... + \\beta_pX_p $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Non-parametric methods"
+    "### Non-parametric methods"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Do not make explict assumptions about the functional form of `f`. Instead seek an estimate of `f` that gets as close to the data points as possible without being too rough or wiggle. Eg: _thin-plate spline_."
+    "Do not make explict assumptions about the functional form of `f`. Instead seek an estimate of `f` that gets as close to the data points as possible without being too rough or wiggle. Eg: _thin-plate spline_."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trade-Off between Prediction Accuracy and Model Interpretability"
+    "# <span style=\"color:blue\">Trade-Off between Prediction Accuracy and Model Interpretability</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In general, as the flexibility of a method increases, its interpretability decreases."
+    "In general, as the flexibility of a method increases, its interpretability decreases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regression Versus Classification Problems"
+    "# <span style=\"color:blue\">Regression Versus Classification Problems</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Regression: Known as quantitative, whose response/output is numerical/continuous values."
+    "**Regression**: Known as quantitative, whose response/output is numerical/continuous values."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Classification: Known as qualitative or categorical. whose response/output is class/discret values."
+    "**Classification**: Known as qualitative or categorical. whose response/output is class/discret values."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assessing Model Accuracy"
+    "# <span style=\"color:blue\">Assessing Model Accuracy</span>"
    ]
   },
   {
@@ -206,8 +208,8 @@
    "metadata": {},
    "source": [
     "#### Mean Squared Error (MSE)\n",
-    "$$MSE = \\frac{1}{n}\\sum_{i=1}^n (y_i - f\\hat(x_i))^2$$\n",
-    "where $f\\hat(x_i)$ is the prediction of the _i_th observation."
+    "## $$MSE = \\frac{1}{n}\\sum_{i=1}^n (y_i - \\hat{f}(x_i))^2$$\n",
+    "where $\\hat{f}(x_i)$ is the prediction of the _i_th observation."
    ]
   },
   {
