--- a/1. Overview.ipynb
+++ b/1. Overview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:blue\">What is Statistical Learning</span>"
+    "# <font color=\"blue\">What is Statistical Learning</font>"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:blue\">Why Estimate `f`</span>"
+    "# <span style=\"color:blue\">Why Estimate *f*</span>"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:blue\">How Estimate `f`</span>"
+    "# <span style=\"color:blue\">How Estimate *f*</span>"
    ]
   },
   {
