--- a/1. Overview.ipynb
+++ b/1. Overview.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=\"blue\">What is Statistical Learning</font>"
+    "# <span style=\"color:blue\">What is Statistical Learning</span>"
    ]
   },
   {
