--- a/1. Overview.ipynb
+++ b/1. Overview.ipynb
@@ -165,6 +165,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <span style=\"color:blue\">Overfitting</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model follows the error or noise too closely. Usually means the model is too complex."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:blue\">Underfitting</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model is too simple. It can not fit the training data well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <span style=\"color:blue\">Trade-Off between Prediction Accuracy and Model Interpretability</span>"
    ]
   },
@@ -229,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
